# ai-tpc-agent

./: Makefile  README.md  ROADMAP.md  cockpit_final_report_v1.md  cockpit_report.html  pyproject.toml  test_gemini.py
.cockpit/: cockpit_audit.sarif  evidence_lake.json
.cockpit/evidence_lake/a1891753340d81e216bcc2db3efcea18/: latest.json  report.html  report.md
.github/workflows/: pulse.yml
src/ai_tpc_agent/: main.py
src/ai_tpc_agent/core/: agent.py  api.py  chat_bridge.py  email_bridge.py  github_bridge.py  maturity.py  pii_scrubber.py  vector_store.py  watcher.py  watchlist.json
test_env/: pyvenv.cfg
tests/: test_agent.py  test_rag.py  test_vertex_rag.py  test_watcher.py
