[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-tpc-agent"
version = "0.1.0"
description = "AI Technical Program Consultant (TPC) Agent for Field Promotion"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "google-adk>=0.1.0",
    "tenacity>=8.0.0",
    "requests>=2.31.0",
    "pytest>=7.0.0",
    "pytest-mock>=3.10.0",
]

[project.scripts]
tpc-agent = "ai_tpc_agent.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_tpc_agent"]
